--- a/app/assets/stylesheets/table/table_panel/layer-sidebar.css.scss
+++ b/app/assets/stylesheets/table/table_panel/layer-sidebar.css.scss
@@ -180,7 +180,7 @@
           &:before {
             position: absolute;
             content: '';
-            left: -4px;
+            left: -1px;
             width: 2px;
             background-color: #fff;
             border: 1px solid $DarkGrey6;
