--- a/app/assets/stylesheets/table/table_panel/table_panel.css.scss
+++ b/app/assets/stylesheets/table/table_panel/table_panel.css.scss
@@ -22,8 +22,8 @@ $corner_radius: 0px;
   border-right:0;
   overflow: visible !important;
   position:fixed;
-  right:-384px;
-  top:68px;
+  right:-452px;
+  top:46px;
   width:452px;
   z-index:20;
 
